{
  "version": 4,
  "terraform_version": "0.12.4",
  "serial": 173,
  "lineage": "67e7992b-4ca4-d1a2-4fdf-c7e7b189dad8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_vm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:944192565900:instance/i-0901bfe8ebdb5b56a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0901bfe8ebdb5b56a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_lab_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2a5c3e157ec3cd7",
            "private_dns": "ip-172-31-41-120.ec2.internal",
            "private_ip": "172.31.41.120",
            "public_dns": "ec2-34-207-216-232.compute-1.amazonaws.com",
            "public_ip": "34.207.216.232",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0ad80ef1099cadf60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sec-grp"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-959ed7c9",
            "tags": {
              "Name": "linux_vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079c004819cd01f53"
            ]
          },
          "depends_on": [
            "aws_security_group.sec-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "win_vm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d41aee8a57fdb850",
            "arn": "arn:aws:ec2:us-east-1:944192565900:instance/i-018491f0fee49173b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-018491f0fee49173b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_lab_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0333c7e8586d8c77c",
            "private_dns": "ip-172-31-37-235.ec2.internal",
            "private_ip": "172.31.37.235",
            "public_dns": "ec2-54-152-124-22.compute-1.amazonaws.com",
            "public_ip": "54.152.124.22",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0e54946b51ab74412",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sec-grp"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-959ed7c9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079c004819cd01f53"
            ]
          },
          "depends_on": [
            "aws_security_group.sec-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "http_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:944192565900:loadbalancer/app/http-elb/37b454416265c88d",
            "arn_suffix": "app/http-elb/37b454416265c88d",
            "dns_name": "http-elb-138318183.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:944192565900:loadbalancer/app/http-elb/37b454416265c88d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "http-elb",
            "security_groups": [
              "sg-079c004819cd01f53"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-959ed7c9"
              },
              {
                "subnet_id": "subnet-c35814a4"
              }
            ],
            "subnets": [
              "subnet-959ed7c9",
              "subnet-c35814a4"
            ],
            "tags": {
              "Name": "http-elb"
            },
            "vpc_id": "vpc-5efb6324",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.sec-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:944192565900:listener/app/http-elb/37b454416265c88d/924839b7e7cfbb1f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:944192565900:targetgroup/target-grp/de3185050a566340",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:944192565900:listener/app/http-elb/37b454416265c88d/924839b7e7cfbb1f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:944192565900:loadbalancer/app/http-elb/37b454416265c88d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.http_elb",
            "aws_lb_target_group.target-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:944192565900:targetgroup/target-grp/de3185050a566340",
            "arn_suffix": "targetgroup/target-grp/de3185050a566340",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-308",
                "path": "/healthcheck",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:944192565900:targetgroup/target-grp/de3185050a566340",
            "lambda_multi_value_headers_enabled": false,
            "name": "target-grp",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-5efb6324"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:944192565900:targetgroup/target-grp/de3185050a566340-20190717025440771700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:944192565900:targetgroup/target-grp/de3185050a566340",
            "target_id": "i-0901bfe8ebdb5b56a"
          },
          "depends_on": [
            "aws_instance.linux_vm",
            "aws_lb_target_group.target-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:944192565900:targetgroup/target-grp/de3185050a566340-20190717025805754400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:944192565900:targetgroup/target-grp/de3185050a566340",
            "target_id": "i-018491f0fee49173b"
          },
          "depends_on": [
            "aws_instance.win_vm",
            "aws_lb_target_group.target-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944192565900:security-group/sg-079c004819cd01f53",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-079c004819cd01f53",
            "ingress": [],
            "name": "sec-grp",
            "name_prefix": null,
            "owner_id": "944192565900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-5efb6324"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1842613522",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-079c004819cd01f53",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.sec-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1909884433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-079c004819cd01f53",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.sec-grp"
          ]
        }
      ]
    }
  ]
}